# enscribi

./: .gitignore  AUTHORS  README  TODO  configure.in  index.html
css/: .style.css.swp  style.css
data/: Makefile.am
data/desktop/: Makefile.am  ekanji.desktop  enscribi.desktop
data/themes/: Makefile.am  ekanji.edc  enscribi.edc
